resources/public/css/main.css
html, body { background-color: #151515; }
h1 {
    position: absolute;
    left: -1500px;
    font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
    font-size: 24px;
    font-style: normal;
    font-variant: normal;
    font-weight: 500;
    line-height: 26.3999996185303px;
    color: #00ff00;
}
h3 {
    font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
    font-size: 14px;
    font-style: normal;
    font-variant: normal;
    font-weight: 500;
    line-height: 15.3999996185303px;
    color: #00ff00;
}
ul#history {
    list-style: none;
    margin: 0;
    padding: 0;
}
p, li {
    margin: 8px 0;
    font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
    font-size: 18px;
    font-style: normal;
    font-variant: normal;
    font-weight: 400;
    line-height: 20px;
    color: #00ff00;
}

li.command {
    color: #ff69b4;
}

input#command {
    background-color: #282828;
    color: #fff;
    font-size: 24px;
    border: 2px #282828 solid;
    height: 60px;
    position: fixed;
    bottom: 10px;
    width: 99%;
    z-index: 100;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding-left: 8px;
}

div#block {
    height: 80px;
    width: 100%;
}

div#title {
    width: 100%;
    height: 120px;
}

div#title img {
    margin: auto;
    display: block;
}

